<resources>
    <string name="app_name">Material_design</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="before_yesterday">before yesterday</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>


    <string name="action_settings" translatable="false">Settings</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="earth" translatable="false">Earth</string>
    <string name="mars" translatable="false">Mars</string>
    <string name="system" translatable="false">System</string>
    <string name="tdby">2 day ago</string>
    <string name="help">help</string>
    <string name="note">note</string>
    <string name="input">input</string>
</resources>