<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.PictureOfTheDay.PictureOfTheDayFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_wiki"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:endIconMode="custom"
            app:helperText="@string/wiki_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout"
            app:singleSelection="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipYesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBeforeYesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/before_yesterday" />
        </com.google.android.material.chip.ChipGroup>

        <com.girogevoro.material_design.custom_view.EquilateralImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top|center"
            android:contentDescription="@string/photo_of_the_day_stub"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup"
            app:srcCompat="@drawable/ic_no_photo_vector" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:menu="@menu/menu_bottom_bar"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab"
        app:tint="#FFFFFF" />

    <include
        android:id="@+id/included"
        layout="@layout/bottom_sheet_layout" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>